# IO-Project

./: .gitignore  CMakeLists.txt  IO Project.sln  README.md  Readme.txt  build.bat  file structure.txt  run.bat
(as least some of) Texture Projects/character's sprite template/SpriteStand(Front+Back)/: Distances.txt
(as least some of) Texture Projects/character's sprite template/SpriteStand(Left+Right)/: DistancesRight.txt
(as least some of) Texture Projects/character's sprite template/UpdatedSpriteStanding(Left+Right)/: DistancesLeftRight.txt
Build Game/: Readme.txt
Build Game/dane/measurements/: armor.txt  body.txt
Build Game/dane/postacie/: 0.txt
Documentation/DIAGRAMY AKTYWNOSCI/achievementElem/: DrawAchievementElem.rtf  UpdateAchievementElem.rtf
Documentation/DIAGRAMY AKTYWNOSCI/button/: CalculateButtonPosition.rtf  isMouseOver.rtf
Documentation/DIAGRAMY AKTYWNOSCI/equipementBox/: UpdateEquipementBox.rtf
Documentation/DIAGRAMY KLAS UML/button/: Button.rtf
Documentation/DIAGRAMY KLAS UML/character/: Character.rtf
Documentation/DIAGRAMY KLAS UML/choiceBox/: ChoiceBox.rtf
Documentation/DIAGRAMY KLAS UML/chooseAction/: ChooseAction.rtf
Documentation/DIAGRAMY KLAS UML/saveFile/: SaveFile.rtf
Documentation/Dodatkowe/: Instrukcja Kompilacji i Uruchomienia.txt  Instrukcja Kompilacji.txt  Instrukcja użytkowania systemu.txt  Podział prac.txt  Unikalne Cechy Projektu.txt  Zastosowane Rozwiązania.txt
Documentation/Dodatkowe/Opis zastosowanych rozwiązań/: Zastosowane Rozwiązania.txt
Documentation/Spis i Struktura Plików/: Skturktura Plików Gry.txt
Documentation/Wymagania Funkcjonalne/: Status Realizacji Wymagań Funkcjonalnych.txt  Wymagania Funkcjonalne.txt
Game/: Game.c  Game.vcxproj  Game.vcxproj.filters  config.cfg
Game Code/: Game Code.vcxproj  Game Code.vcxproj.filters  animateAttack.c  button.c  camera.c  character.c  characterCreator.c  choiceBox.c  chooseAction.c  chooseAction.h  createSaveFile.c  dialog.c  equipementBox.h  equipementsBox.c  explore.c  fight.c  fighterLabel.c  hitbox.c  loadGame.c  loadResources.c  loadSettings.c  menu.c  newGame.c  numberSlideBox.c  pause.c  player.h  removeDirectory.c  renderer.h  resources.h  saveData.h  saveSaveFile.c  savefile.h  settings.c  state.h  stateManager.c  stringSlideBox.h  tutorialSlide.c
Game/dane/mapy/: 0.txt
Game/dane/measurements/: armor.txt
Game/saves/ 35t 4 t5/: date.txt  postać.txt
Game/saves/My Nice Save/: date.txt
Game/saves/MyNiceGame/: date.txt  postać.txt
Game/saves/SD/: date.txt  postać.txt
IO Project/: IO Project.c  IO Project.vcxproj  IO Project.vcxproj.filters  ModUpdateCamera.c  ModUpdateCamera.h  My Nice Save  achievementElem.c  achievements.c  achivements.c  armor.h  bodyParts.h  button.c  button.h  camera.c  ceiling.c  ceiling.h  character.c  character.h  characterCreator.c  characterCreator.h  characterCreatorThing.c  characterCreatorThing.h  choiceBox.c  choiceBox.h  chooseAction.c  config.cfg  createSaveFile.c  cube.c  deathScreen.c  dialog.c  dkfmklsdmf  equipement.c  equipementBox.h  equipementsBox.c  explore.c  fight.c  fighterLabel.c  fighterLabel.h  floor.c  floor.h  (+66 more)
IO Project/dane/: armorMeasurements.txt  bodyMeasurements.txt  bodyType.txt
IO Project/dane/mapy/: 0.txt  position.txt
IO Project/dane/measurements/: armor.txt  weapon.txt
IO Project/dane/postacie/: 0.txt  1.txt
IO Project/dane/przedmioty/: armor.txt  weapon.txt
IO Project/samouczek/tip2/: description.txt  title.txt
IO Project/saves/Bob/: date.txt  postać.txt
IO Project/saves/Debug Save/: date.txt  ekwipunek.txt  postać.txt
IO Project/saves/Lol/: date.txt  postać.txt
IO Project/saves/My Nice Save/: date.txt  ekwipunek.txt  postać.txt
IO Project/saves/My Nice Save_1/: date.txt
IO Project/saves/My Nice Save_2/: date.txt
IO Project/saves/My Nice Save_3/: date.txt
IO Project/saves/My Nice Save_4/: date.txt
IO Project/saves/My Nice Save_6/: postać.txt
IO Project/saves/New Game/: date.txt  postać.txt
IO Project/saves/New Test/: date.txt  postać.txt
IO Project/saves/Nowa Gra/: date.txt  ekwipunek.txt  postać.txt
IO Project/saves/Nowa Graa/: date.txt
IO Project/saves/Nowa Graaaa/: date.txt
IO Project/saves/PeaceFull Test/: date.txt
IO Project/saves/Test Posta/: date.txt  postać.txt
IO Project/saves/Trade Test/: date.txt  ekwipunek.txt
IO Project/saves/Trade Test 2/: date.txt
IO Project/saves/a/: date.txt  postaæ.txt  postać.txt
IO Project/saves/abc/: date.txt  postać.txt
IO Project/saves/asd/: date.txt  postać.txt
IO Project/saves/df/: date.txt  postać.txt
IO Project/saves/dfbgdfgbd/: date.txt  postać.txt
IO Project/saves/dfunvkjsfn/: date.txt  postać.txt
IO Project/saves/efwsdfdbhrtewfdsf/: date.txt  postać.txt
IO Project/saves/f/: date.txt
IO Project/saves/k/: date.txt  postaÄ‡.txt
IO Project/saves/new/: date.txt  postać.txt
IO Project/saves/sdf/: date.txt  postać.txt
IO Project/saves/sf/: date.txt
IO Project/saves/ssss/: date.txt  postać.txt
Struktury Plików/: dialog.txt  mapa.txt  postać.txt  przedmioty.txt  sklep.txt  ustawienia.txt  zapis gry.txt
Unit Tests/: Unit Tests.c  Unit Tests.vcxproj  Unit Tests.vcxproj.filters  test_achievement.c  test_button.c  test_chooseAction.c  test_createSaveFile.c  test_equipmentBox.c  test_fighterLabel.c  test_inputBox.c  test_itemBox.c  test_numberSlideBox.c  test_saveData.c  test_stringSlideBox.c  tests.h
character's sprite template/Armor/: Armor Distances.txt
character's sprite template/Move/: BodyMovementMeasurements1.txt
character's sprite template/SpriteStand(Front+Back)/: Distances.txt
character's sprite template/SpriteStand(Left+Right)/: DistancesLeft.txt  DistancesRight.txt
character's sprite template/UpdatedSpriteStanding(Left+Right)/: DistancesLeftRight.txt
character's sprite template/Weapons/: Weapons Measurments.txt
dependencies/src/: rtextures.c
source/tests/: test_achievement.c  test_chooseAction.c  test_createSaveFile.c  test_equipmentBox.c  test_fighterLabel.c  test_inputBox.c  test_itemBox.c  test_numberSlideBox.c  test_stringSlideBox.c
(+134 files in other folders)
